--- a/app/src/main/res/layout/activity_mi_medico.xml
+++ b/app/src/main/res/layout/activity_mi_medico.xml
@@ -8,7 +8,12 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/doctor" />
+        android:layout_width="405dp"
+        android:layout_height="580dp"
+        android:layout_marginStart="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.437"
+        app:srcCompat="@drawable/curriculum_de_medico" />
 </androidx.constraintlayout.widget.ConstraintLayout>
