--- a/app/src/main/res/layout/activity_lista_medicamentos.xml
+++ b/app/src/main/res/layout/activity_lista_medicamentos.xml
@@ -9,13 +9,40 @@
         android:id="@+id/listaMedicamentosRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="-2dp" />
+
     <Button
         android:id="@+id/volverButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Volver"
-        android:onClick="volverAMisMedicamentos" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="763dp"
+        android:layout_marginBottom="36dp"
+        android:backgroundTint="#03A9F4"
+        android:onClick="volverAMisMedicamentos"
+        android:text="Volver" />
+
+    <Button
+        android:id="@+id/vaciarListaButton"
+        android:layout_width="148dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="241dp"
+        android:layout_marginTop="762dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="36dp"
+        android:onClick="vaciarLista"
+        android:backgroundTint="#03A9F4"
+        android:text="Vaciar Lista" />
 
 
 </RelativeLayout>
