--- a/app/src/main/res/layout/activity_mis_recetas.xml
+++ b/app/src/main/res/layout/activity_mis_recetas.xml
@@ -8,10 +8,16 @@
     tools:context=".MisRecetasActivity">
 
     <!-- activity_mis_recetas.xml -->
+
     <Button
         android:id="@+id/openPdfButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="151dp"
         android:text="Abrir PDF" />
 
     <WebView
