--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -64,39 +64,68 @@
             android:inputType="textEmailAddress"
             android:padding="16dp" />
 
-        <EditText
-            android:id="@+id/passwordEditText"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginRight="24dp"
-            android:autofillHints="@string/password"
-            android:background="@drawable/ic_field"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawablePadding="16dp"
-            android:ems="10"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:padding="16dp" />
+            app:boxBackgroundMode="outline"
+            app:passwordToggleEnabled="true">
 
-        <EditText
-            android:id="@+id/repeatPasswordEditText"
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="@string/password"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@drawable/ic_field"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:maxLength="16"
+                android:padding="16dp"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="16dp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Agrega el TextView para mostrar el mensaje de condiciones de la contraseña -->
+        <TextView
+            android:id="@+id/passwordConditionsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="24dp"
-            android:autofillHints="@string/repeat_password"
-            android:background="@drawable/ic_field"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawablePadding="16dp"
-            android:ems="10"
-            android:hint="@string/repeat_password"
-            android:inputType="textPassword"
-            android:maxLength="16"
-            android:padding="16dp" />
+            android:text=""
+            android:textColor="#F44336" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/repeatPasswordInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:boxBackgroundMode="outline"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/repeatPasswordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="@string/repeat_password"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:background="@drawable/ic_field"
+                android:hint="@string/repeat_password"
+                android:inputType="textPassword"
+                android:maxLength="16"
+                android:padding="16dp"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="16dp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/TeminosCondiciones"
