--- a/app/src/main/res/layout/medication_item.xml
+++ b/app/src/main/res/layout/medication_item.xml
@@ -1,31 +1,34 @@
 <!-- medicamento_item.xml -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/ic_buttom"
+    android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/medicationNameTextView"
-        android:layout_width="203dp"
-        android:layout_height="21dp"
+        android:layout_width="296dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="117dp"
-        android:layout_marginEnd="83dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="37dp"
         android:text="Nombre del Medicamento"
-        android:textSize="16sp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/medicationTimeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="289dp"
+        android:layout_height="62dp"
         android:layout_below="@+id/medicationNameTextView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="118dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="91dp"
+        android:layout_marginEnd="44dp"
         android:text="Hora del Medicamento"
-        android:textSize="14sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
